--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 ALGOLIA_APP_ID=I9A62UQS9Z
 ALGOLIA_WRITE_API_KEY=
 ALGOLIA_INDEX_NAME=docs-test
+PUBLIC_ALGOLIA_SEARCH_APP_ID=
+PUBlIC_ALGOLIA_SEARCH_PUBLIC_API_KEY=
