--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@astrojs/react": "^4.4.0",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/vercel": "^8.2.8",
+    "@chainlink/blocks": "^1.3.1",
     "@chainlink/cl-search-frontend": "^0.12.0",
     "@chainlink/components": "^0.4.18",
     "@chainlink/contracts": "1.4.0",
@@ -67,8 +68,6 @@
     "@nanostores/preact": "^0.5.2",
     "@nanostores/react": "^0.8.4",
     "@openzeppelin/contracts": "^4.9.6",
-    "@supabase/supabase-js": "^2.58.0",
-    "astro": "^5.14.1",
     "@solana-program/compute-budget": "^0.9.0",
     "@solana-program/system": "^0.8.1",
     "@solana-program/token": "^0.6.0",
@@ -79,6 +78,8 @@
     "@solana/wallet-adapter-react": "^0.15.39",
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@supabase/supabase-js": "^2.58.0",
+    "astro": "^5.14.1",
     "bignumber.js": "^9.3.1",
     "bs58": "^6.0.0",
     "clipboard": "^2.0.11",
