--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@astrojs/prism": "^3.3.0",
     "@astrojs/react": "^4.4.0",
     "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.2.8",
     "@chainlink/blocks": "^1.3.1",
     "@chainlink/cl-search-frontend": "^0.12.0",
@@ -79,7 +80,6 @@
     "@solana/wallet-adapter-react-ui": "^0.9.39",
     "@solana/wallet-adapter-wallets": "^0.19.37",
     "@supabase/supabase-js": "^2.58.0",
-    "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.1",
     "bignumber.js": "^9.3.1",
     "bs58": "^6.0.0",
@@ -102,7 +102,6 @@
     "remark-directive": "^3.0.1",
     "swagger-ui-dist": "^5.29.0",
     "swagger-ui-react": "^5.29.0",
-    "tailwindcss": "^4.1.14",
     "tweetnacl": "^1.0.3",
     "uuid": "^11.1.0"
   },
@@ -128,6 +127,7 @@
     "@types/swagger-ui-react": "^5.18.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-config-standard": "^17.1.0",
@@ -148,6 +148,7 @@
     "solhint": "^5.2.0",
     "solhint-plugin-chainlink-solidity": "github:smartcontractkit/chainlink-solhint-rules",
     "solhint-plugin-prettier": "^0.1.0",
+    "tailwindcss": "^3.4.18",
     "ts-jest": "^29.4.4",
     "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6",
