add changelog stylin and elements

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@11ty/eleventy-fetch": "^4.0.1",
+    "@algolia/client-search": "^5.41.0",
     "@apollo/client": "^3.14.0",
     "@astro-community/astro-embed-youtube": "^0.5.7",
     "@astrojs/mdx": "^4.3.6",
